app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.material-symbols-filled {
  font-variation-settings: "FILL" 1;
}

.uppy-Dashboard-inner, .uppy-Dashboard-inner * {
  background: transparent !important;
  color: var(--foreground) !important;
  border: none !important;
}

.uppy-Dashboard-AddFiles-info {
  display: none !important;
}


@media screen and (max-width: 500px) {
  .uppy-Dashboard-inner {
    width: 90vw !important;
  }
}

@media screen and (max-width: 320px) {
  .uppy-Dashboard-inner {
    width: 87vw !important;
  }
}

.noise {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  display: flex;
  position: relative;
  min-height: max-content;
}

.noise > div {
  flex: 1;
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
  position: relative;
  min-height: max-content !important;
}

.noise canvas {
  z-index: -2;
  top: 0;
  left: 0;
  width: 100%;
  position: absolute;
  height: 100vh;
}

.noise > div > div {
  flex: 1;
  position: relative;
  height: 100% !important;
  width: 100% !important;
  min-height: max-content !important;
}

.noise-content {
  height: 100% !important;
  width: 100% !important;
  min-height: max-content !important;
}

